crates/sui-prover/tests/snapshots/dynamic_object_field/exists_.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/dynamic_object_field/exists_.fail.move:28:5
   │
28 │     ensures(dynamic_object_field::exists_(&x.id, ELIDEDu64));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/dynamic_object_field/exists_.fail.move:22: foo_spec
