crates/sui-prover/tests/snapshots/dynamic_object_field/exists_new_name.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/dynamic_object_field/exists_new_name.fail.move:24:5
   │
24 │     ensures(!dynamic_object_field::exists(&x.id, ELIDEDu64));
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/dynamic_object_field/exists_new_name.fail.move:21: foo_spec
